# libofx-rs

./: Cargo.toml
docs/samples/: santander.ofx
libofx/: Cargo.toml  build.rs
libofx-sys/: Cargo.toml
libofx-sys/src/: lib.rs
libofx/src/: lib.rs  ofxwrapper.cxx
